2010-05-02  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>

	* src/Makefile.am: Add date_time library.
	* include/Makefile.am: Add StatsInfo.h

	* include/Message.h: Add ReturnMessage.
	* include/StatsInfo.h: New file.

2010-05-02  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/BeliefCombination.cpp: Fix debug output.

	* include/SatSolver.tcc (dmcs::solve): Throw exception when there
	was an error during SAT solving.

	* include/Client.tcc: Throw a runtime_error when there is a
	network error.

	* include/BaseDMCS.h: Move localSolve to BaseDMCS.
	Do not use global belief states.
	* include/OptDMCS.h: Likewise.
	* include/PrimitiveDMCS.h: Likewise.
	* src/BaseDMCS.cpp: Likewise.
	* src/Makefile.am: Likewise.
	* src/OptDMCS.cpp: Likewise.
	* src/PrimitiveDMCS.cpp: Likewise.

2010-05-02  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/ClaspResultGrammar.tcc: Simplify rule value. Fixed the
	bug with single line result from clasp.

2010-05-02  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/dimacs-small.txt: New file.
	* examples/dimacs-small-result.txt: Likewise.

	* examples/dia-4-4-2-2-1.opt1: Remove.

	* examples/dia-4-4-2-2-1_command_line.txt: Fix V for basic DMCS.
	* examples/dia-4-4-2-2-1_command_line.sh: Likewise.
	* examples/dia-4-4-2-2-1.top: Likewise.
	* examples/dia-4-4-2-2-1.opt: Likewise.

	* src/dmcsd.cpp: Do not include CnfBuilder.h and CnfGrammar.h.

	* include/LoopFormula.h: Add documentation.
	* include/SatSolver.tcc: Likewise.
	* include/Theory.h: Likewise.

	* include/CnfBuilder.h: Deprecate file.
	* include/CnfBuilder.tcc: Likewise.
	* include/CnfGrammar.h: Likewise.
	* include/CnfGrammar.tcc: Likewise.

	* include/ClaspResultBuilder.tcc: De-obfuscate code.

2010-04-29  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/Makefile.am (dmcsd_LDADD): Linker on Linux is
	order-sensitive.

2010-04-28  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/tests/testQueryPlan.cpp: Resuscitate testQueryPlan.
